[JBPAPP-8110] create 2.1.12 patch03 tag